# Square-Root_rationalizer

./: .gitignore  LICENSE.md  README.md  d  pyproject.toml  rationalize_sqrt.py  run advanced.cmd  run.cmd  setup.cfg
.github/: release.yaml
.github/workflows/: release.yml  workflow.yaml
output/: log-10.txt  log-11.txt  log-13.txt  log-14.txt  log-19.txt
src/rationalize_sqrt/: rationalize_sqrt.py
