[metadata]
name = sqrt_rationalizer
version = 0.1.0
author = KICE
author_email = 6kouman@gmail.com
description = Generates numbers that work well with square roots.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K1CE/Square-Root_rationalizer
project_urls =
    Bug Tracker = https://github.com/K1CE/Square-Root_rationalizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src